Fix major graphics glitch: Thumbnail may overlap into the edit area
Backend. Screen: https://www.dropbox.com/s/rlilzsr5d7dfb5v/fix-evogallery-graphics-glitch.png

--- a/assets/modules/evogallery/templates/screen.css
+++ b/assets/modules/evogallery/templates/screen.css
@@ -101,6 +101,8 @@ p.thumbPreview {
     text-align: center;
 }
 p.thumbPreview img {
+    max-width: 220px;
+    max-height: 380px;
 }
 #overlay form {
     margin-left: 220px;
